tests/authorization-settings/00-application.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: authorization-settings-default-deny
spec:
  image: image
  port: 8080
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: actuator-settings-allow-all
spec:
  image: image
  port: 8080
  authorizationSettings:
    allowAll: true
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: authorization-settings-allow-list
spec:
  image: image
  port: 8080
  authorizationSettings:
    allowList:
      - "/actuator/health"
      - "/actuator/info"
