tests/authorization-settings/01-application-change.yaml
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: authorization-settings-allow-list
spec:
  image: image
  port: 8080
  authorizationSettings:
    allowList:
      - "/actuator/info"
      - "/actuator/shutdown"
---
apiVersion: skiperator.kartverket.no/v1alpha1
kind: Application
metadata:
  name: authorization-settings-allow-all
spec:
  image: image
  port: 8080
