tests/authorization-settings/02-delete-application.yaml
apiVersion: kuttl.dev/v1beta1
kind: TestStep
delete:
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: authorization-settings-default-deny
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: authorization-settings-allow-all
  - apiVersion: skiperator.kartverket.no/v1alpha1
    kind: Application
    name: authorization-settings-allow-list
