tests/authorization-settings/00-assert.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-settings-default-deny-actuator-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
  selector:
    matchLabels:
      app: authorization-settings-default-deny
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-settings-allow-list-actuator-deny
spec:
  action: DENY
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator*
  selector:
    matchLabels:
      app: authorization-settings-allow-list
---
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-settings-allow-list-allow
spec:
  rules:
    - from:
        - source:
            namespaces:
              - istio-gateways
      to:
        - operation:
            paths:
              - /actuator/health
        - operation:
            paths:
              - /actuator/info
  selector:
    matchLabels:
      app: authorization-settings-allow-list
