tests/authorization-settings/01-errors.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: authorization-settings-allow-list-actuator-allow
spec:
  rules:
    - to:
        - operation:
            paths:
              - /actuator/health
